--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
-<!DOCTYPE html><html><head>
-    <script src="p5.js"></script>
-    <script src="p5.dom.min.js"></script>
-    <script src="p5.sound.min.js"></script>
-<script src="./p5.play.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8">
-
-  </head>
-  <body>
-      <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.2.6/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.2.0/firebase-database.js"></script>
+<!DOCTYPE html>
+<html>
+  <head>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.min.js"></script>
+    <script src="p5.play.js"></script>
+    
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-database.js"></script>
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
@@ -18,16 +16,22 @@
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyD-AjL3j-FuUUezFkUH6wxBSSNMiLn2sXY",
-    authDomain: "project-35-25e96.firebaseapp.com",
-    databaseURL: "https://project-35-25e96-default-rtdb.firebaseio.com",
-    projectId: "project-35-25e96",
-    storageBucket: "project-35-25e96.appspot.com",
-    messagingSenderId: "98936746687",
-    appId: "1:98936746687:web:e5f25acaeeaa6e1e0d8c0a"
+    apiKey: "AIzaSyCVoDNIpB5dGCP-Qxa7Ro9YyRqWzdcXhf8",
+    authDomain: "ball-game-f0068.firebaseapp.com",
+    databaseURL: "https://ball-game-f0068-default-rtdb.firebaseio.com",
+    projectId: "ball-game-f0068",
+    storageBucket: "ball-game-f0068.appspot.com",
+    messagingSenderId: "283764449895",
+    appId: "1:283764449895:web:b833b251df1592cd2f6ac2"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
-<script src="sketch.js"></script>
-</body></html>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <meta charset="utf-8">
+
+  </head>
+  <body>
+      <script src="sketch.js"></script>
+    </body>
+</html>
